--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -1,42 +1,49 @@
-@import '../../styles/variables.scss';
-@import '/src/styles/mixins.scss';
+@import "../../styles/variables.scss";
+@import "/src/styles/mixins.scss";
 
 #about {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    #about-heading {
-        margin-bottom: 32px;
-        h2 {
-            @include highlight;
-        }
-    }
-    h3 {
-        @include page-header;
-    }
-    #about-content {
-        display: flex;
-        gap: 15px;
-        width: clamp(300px, 80vw, 1000px);
-        align-items: stretch;
-    }
-    #profile-picture {
-        min-height: 500px;
-        width: 100%;
-        background-position: center top;
-        background-size: cover;
-        background-repeat: no-repeat;
-        position: relative;
-        color: white;
-    }
-    #profile-text {
-        h4 {
-            margin: 0;
-            font-weight: 500;
-        }
-    }
-    #profile-picture, #profile-text {
-        flex: 1;
-    }
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	#about-heading {
+		margin-bottom: 32px;
+		h2 {
+			@include highlight;
+		}
+	}
+	h3 {
+		@include page-header;
+	}
+	#about-content {
+		width: clamp(300px, 80vw, 1000px);
+
+		.floating-image {
+			float: left;
+			margin: 0 16px 16px 0; // Right and bottom margin
+			width: 450px; // Adjust as needed
+			height: 550px; // Adjust as needed
+			border-radius: 8px;
+			object-fit: cover;
+		}
+
+		h4 {
+			margin: 0 0 16px 0;
+			font-weight: 500;
+			// This will appear to the right of the image
+		}
+
+		p {
+			line-height: 1.6;
+			text-align: justify; // Optional: makes text look cleaner
+			// Text will wrap around the image, then continue below it
+		}
+	}
+
+	// Clear the float after the content
+	#about-content::after {
+		content: "";
+		display: table;
+		clear: both;
+	}
 }
