--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,25 +1,27 @@
-@import '/src/styles/mixins.scss';
+@import "/src/styles/mixins.scss";
 
 #home-hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-    height: 500px;
-    width: 100%;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    button {
-        @include button-style;
-    }
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+	height: 500px;
+	width: calc(100% + 48px);
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	position: relative;
+	color: white;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-left: -24px; // Match your app padding
+	margin-right: -24px; // Match your app padding
+	button {
+		@include button-style;
+	}
 }
 
 #mission {
-    width: clamp(300px, 80vw, 1000px);
-    margin: 20px auto;
-    text-align: center;
+	width: clamp(300px, 80vw, 1000px);
+	margin: 20px auto;
+	text-align: center;
 }
