jk i need this xdd

--- a/src/components/Services/services.scss
+++ b/src/components/Services/services.scss
@@ -19,6 +19,7 @@
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
         justify-items: center;
+        gap: clamp(20px, 4vw, 24px);
 		@media (max-width: 768px) {
 			grid-template-columns: 1fr;
 		}
