--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -19,10 +19,10 @@
         justify-content: center;
         align-items: center;
         width: clamp(300px, 80vw, 1000px);
+        form {
+            width: 100%;
+        }
 	}
-    .form-control-lg {
-        font-size: 2rem !important;
-    }
     
     textarea { 
         resize: none;
