--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -15,6 +15,9 @@
 	align-items: center;
 	margin-left: -24px;
 	margin-right: -24px;
+	// h2 {
+	// 	@include page-header;
+	// }
 	button {
 		@include button-style;
 	}
