--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -26,6 +26,12 @@
 			height: 550px; 
 			border-radius: 8px;
 			object-fit: cover;
+			@media screen and (max-width: 768px) {
+				width: 100%;
+				height: auto;
+				margin: 0 0 16px 0;
+				
+			}
 		}
 		h3 {
 			margin: 0 0 16px 0;
