--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,7 +1,7 @@
 @import "/src/styles/mixins.scss";
 
 footer {
-	padding-top: 88px;
+	padding-top: 64px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -20,9 +20,16 @@ footer {
 #footer-content-upper {
 	display: flex;
 	justify-content: space-evenly;
+	@media screen and (max-width: 768px) {
+		justify-content: center;
+	}
 	align-items: center;
 		div:nth-child(2) {
 			align-items: flex-end;
+			@media screen and (max-width: 768px) {
+				align-items: flex-start;
+				
+			}
 	}
 }
 #footer-section {
