--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -15,9 +15,10 @@
 	align-items: center;
 	margin-left: -24px;
 	margin-right: -24px;
-	// h2 {
-	// 	@include page-header;
-	// }
+	h2 {
+		// @include page-header;
+		text-align: center
+	}
 	button {
 		@include button-style;
 	}
